Refactor admin
