# apps/api/src/app.ts
@@ -36,4 +36,4 @@ app.use('/health', createHealthRouter(healthController))
 app.use('/products', productRouter)
 app.use('/financial-entities', createFinancialEntityRoutes(financialEntityController))
 app.use('/clients', clientRouter)
-app.use('/clients', clientFinancialEntityRouter)
+app.use('/', clientFinancialEntityRouter)
